# AI-automated-CV-parser

./: README.md  main.py  pyproject.toml  requirements.txt
